<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical|top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblseleccione1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblcursoID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblcurso" />

        <Spinner
            android:id="@+id/spncursoID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblparalelo" />

        <Spinner
            android:id="@+id/spnparaleloID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblVictima" />

        <Spinner
            android:id="@+id/spnvictimaID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAgresor" />

        <Spinner
            android:id="@+id/spnagresorID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/btncargarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cargarEstudiantes"
        android:text="@string/btncargar" />

    <Button
        android:id="@+id/btnenviaralerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnenviaralerta" />

</LinearLayout>