<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.65"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_weight="0.65" >

        <Button
            android:id="@+id/btnalertarID"
            android:layout_width="144dp"
            android:layout_height="68dp"
            android:layout_marginBottom="28dp"
            android:text="@string/btnalertar" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/img" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_weight="0.04"
            android:src="@android:drawable/ic_menu_manage" />

        <Button
            android:id="@+id/btnconocerID"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.04"
            android:text="@string/btnconocer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnsalirID"
            android:layout_width="80dp"
            android:layout_height="66dp"
            android:layout_marginBottom="22dp"
            android:layout_weight="0.15"
            android:text="@string/btnsalir" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="174dp"
            android:layout_weight="0.44"
            android:src="@drawable/gallery" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

</LinearLayout>